# client-sdk-python

./: .gitignore  .gitmodules  .pyre_configuration  .requirements.txt  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  RELEASE.md  SECURITY.md  build.sh  checklist.md  cmake_install.cmake  codegen.sh  conftest.py  format.sh  mini-wallet.md  pylama.ini  pyproject.toml  requirements.txt  setup-pylibra-beta.py  setup.py  test-pylibra-beta.sh  test.sh
.circleci/: config.yml
.github/workflows/: build.yml  python-publish.yml
c/: CMakeLists.txt  main.c
cpp/: CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  main.cc  test.sh
diem-types-ext/: ChainId.py  Metadata.py  PaymentMetadataV0.py  SignedTransaction.py  TypeTag.py
docker-compose/: mini-wallet-service.yaml
docker/testnet/: docker-compose.yaml
docs/: _config.yml  index.md  mini-wallet-api-spec.html  offchain-api-v3.html  offchain-api-v3.yaml  openapi.yaml
docs/diem/: auth_key.html  chain_ids.html  index.html  local_account.html  testnet.html  txnmetadata.html  utils.html
docs/examples/: create_child_vasp.html  index.html  intent_identifier.html  p2p_transfer.html  refund.html  stubs.html
examples/: create_child_vasp.py  intent_identifier.py  p2p_transfer.py  refund.py  stubs.py
examples/tests/: conftest.py  test_offchain.py  test_offchain_error_cases.py
examples/vasp/: __init__.py  conftest.py  server.sh  test_offchain.py  test_offchain_error_cases.py  wallet.py
js/: .gitignore  Cargo.toml
js/empty/clear_on_drop/: Cargo.toml
js/empty/clear_on_drop/src/: clear.rs  clear_on_drop.rs  hide.rs  lib.rs
js/empty/errno/: Cargo.toml
js/empty/errno/src/: lib.rs
js/empty/get_if_addrs/: Cargo.toml
js/empty/get_if_addrs/src/: lib.rs
js/empty/memsec/: Cargo.toml
js/empty/memsec/src/: lib.rs
js/src/: lib.rs
lcs/: lcs.py  transaction.yaml
lib/: Cross.toml  update.sh
lib/docker/: build.sh
libra-dev/: Cargo.toml
libra-dev/include/: data.h
libra-dev/src/: account.rs  account_resource.rs  data.rs  error.rs  event.rs  lib.rs  transaction.rs
libra-types-ext/: AccountAddress.py
python/: .gitignore  .pyre_configuration  CMakeLists.txt  MANIFEST.in  build.sh  codegen.sh  format.sh  generate_pyi.sh  publish.sh  publish_prod.sh  publish_test.sh  pylama.ini  pylibra.pyx  pyproject.toml  setup.py  test.sh  test_account_resource.py  test_accountkey.py  test_pylibra.py  test_testnet.py  test_transcation.py
python/codegen/: Cargo.toml  update.sh
python/codegen/src/: main.rs
python/lib/: .gitignore  Cross.toml  build.sh  data.h  update.sh
python/lib/docker/: Dockerfile  build.sh
python/pylibra/: __init__.py  _pylibra.c
python/src/pylibra/: __init__.py  _config.py  _jsonrpc_transport.py  _mint.py  _native.pyi  _native.pyx  _transport.py  _types.py  _types.pyi  _types.pyx  api.pyx  capi.pxd  transport.py
python/src/pylibra/_lcs/: __init__.py  _libra_types.py
python/src/pylibra/grpc/: .gitignore  access_path_pb2.py  account_state_blob_pb2.py  admission_control_pb2.py  download.sh  events_pb2.py  fix.sh  get_with_proof_pb2.py  language_storage_pb2.py  ledger_info_pb2.py  mempool_status_pb2.py  proof_pb2.py  transaction_info_pb2.py  transaction_pb2.py  validator_change_pb2.py  validator_public_keys_pb2.py  validator_set_pb2.py  vm_errors_pb2.py
python/src/pylibra/lcs/: __init__.py
python/src/pylibra/libra_types/: __init__.py
python/src/pylibra/serde_types/: __init__.py
python/src/pylibra/stdlib/: __init__.py
python/src/pylibra/transport/: __init__.py  account_state.py
python/src/pylibra/transport/proto/: .gitignore  download.sh  fix.sh
python/src/pylibra2/: __init__.py  _account.py  _config.py  _events.py  _lib.py  _transaction.py  _types.py  _utils.py  command.sh
python/src/pylibra2/json_rpc/: request.py  types.py
python/src/pylibra2/tests/: integration_tests.py  test_address.py  test_json_rpc.py  test_pylibra2.py  test_utils.py
python/tests/: app.py  assoc_asblob.txt  test_account_resource.py  test_accountkey.py  test_events.py  test_lcs.py  test_testnet.py  test_transaction.py  test_transcation.py
python/typeshed/: grpc.pyi  pytest.pyi
python/typeshed/numpy/: __init__.pyi
python/typeshed/numpy/core/: numeric.pyi  numerictypes.pyi
python/typeshed/pylibra/grpc/: access_path_pb2.pyi  account_state_blob_pb2.pyi  admission_control_pb2.pyi  admission_control_pb2_grpc.pyi  events_pb2.pyi  get_with_proof_pb2.pyi  language_storage_pb2.pyi  ledger_info_pb2.pyi  mempool_status_pb2.pyi  proof_pb2.pyi  transaction_info_pb2.pyi  transaction_pb2.pyi  validator_change_pb2.pyi  validator_public_keys_pb2.pyi  validator_set_pb2.pyi  vm_errors_pb2.pyi
rust/: .gitignore  Cargo.toml  build.rs  test.sh  update_peers.sh
rust/src/: bindings.rs  client_proxy.rs  commands.rs  grpc_client.rs  lib.rs  main.rs  query_commands.rs
rust/tests/libratest/: smoke_test.rs
src/: libra-jsonrpc-types.proto
src/diem/: __VERSION__.py  __init__.py  auth_key.py  chain_ids.py  constants.py  jws.py  local_account.py  testnet.py  txnmetadata.py  utils.py
src/libra/: __init__.py  auth_key.py  chain_ids.py  identifier.py  local_account.py  testnet.py  txnmetadata.py  utils.py
src/pylibra/: _mint.py  _native.pyx  _transport.py
src/pylibra2/: TARGETS  __init__.py  _account.py  _address.py  _config.py  _events.py  _lib.py  _libra_blockchain_info.py  _transaction.py  _types.py  _utils.py  codegen.sh  test.sh
tests/: conftest.py  local_account.py  test_auth_key.py  test_client.py  test_identifier.py  test_jsonrpc_blocking_client.py  test_jws.py  test_lcs.py  test_local_account.py  test_offchain_client.py  test_offchain_command.py  test_offchain_fppa_state.py  test_offchain_jws.py  test_offchain_payment_state.py  test_offchain_state.py  test_offchain_types.py  test_testing_cli.py  test_testnet.py  test_txnmetadata.py  test_utils.py
tests/jsonrpc/: test_async_client.py
tests/miniwallet/: conftest.py  test_api.py  test_client.py  test_diem_account.py  test_models.py  test_store.py
tests/pylibra2/: test_testnet.py
typeshed/: pytest.pyi
(+190 files in other folders)
