[package]
name = "libra-dev"
version = "0.1.0"
authors = ["SunMi Lee <sunmilee@calibra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libra-types = { git  = "https://github.com/libra/libra.git", branch = "testnet" }
libra-crypto = { git  = "https://github.com/libra/libra.git", branch = "testnet" }

[dev-dependencies]
lcs = { git  = "https://github.com/libra/libra.git", branch = "testnet", package = "libra-canonical-serialization" }

[lib]
crate-type = ["cdylib"]

[profile.dev]
lto = true

[profile.release]
lto = true