[package]
name = "libra-dev"
version = "0.1.0"
authors = ["SunMi Lee <sunmilee@calibra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libra-types = { git  = "https://github.com/libra/libra.git", rev = "3160002c" }
libra-crypto = { git  = "https://github.com/libra/libra.git", rev = "3160002c" }
transaction-builder = {git = "https://github.com/libra/libra.git", rev = "3160002c" }
lcs = { git  = "https://github.com/libra/libra.git", rev = "3160002c", package = "libra-canonical-serialization" }
libc = "0.2.65"

[dev-dependencies]
rand = "0.6.5"

[lib]
crate-type = ["staticlib", "cdylib"]

# FFI libray can only support panic = "abort"
[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'
lto = true
