[package]
name = "codegen"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra Serde Codegen"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = "0.3.12"

serde-reflection = "0.2.0"
